k8s/sites/rielu/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: web-rielu
spec:
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv6
  selector:
    app: web-rielu
  ports:
    - port: 80
      targetPort: 80
