k8s/sites/rielu/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-rielu-ingress
  namespace: web-rielu
  annotations:
    kubernetes.io/ingress.class: "public"
spec:
  ingressClassName: public
  rules:
    - host: rielu.uniproject.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
